style: now avoiding layout shift when reloading component (change in any form)

--- a/src/app/components/component-view/playgrounds/carousel-playground/carousel-playground.component.css
+++ b/src/app/components/component-view/playgrounds/carousel-playground/carousel-playground.component.css
@@ -95,6 +95,9 @@
 
         .main-component {
             max-width: 100vw;
+
+            /* Stablishing predifined height for avoiding layout shift */
+            min-height: 500px;
         }
     }
 }
